[gd_scene load_steps=19 format=3 uid="uid://1i88k2ep23hk"]

[ext_resource type="Script" path="res://Scenes/Menus/CharacterMenu/MenuPages/EquipmentMenu/EquipmentSlotsContainer/equipment_display_container.gd" id="1_1ll62"]
[ext_resource type="Texture2D" uid="uid://bvdik5isqdgxf" path="res://Scenes/Menus/CharacterMenu/MenuPages/EquipmentMenu/EquipmentSlotsContainer/EquipmentGrid_Background.png" id="2_tlto1"]
[ext_resource type="Script" path="res://Scenes/Menus/CharacterMenu/MenuPages/EquipmentMenu/EquipmentSlotsContainer/equipment_display_slot_button.gd" id="3_1srlt"]
[ext_resource type="Texture2D" uid="uid://cdxe2v7hg5tuw" path="res://assets/Sprites/UI/CharacterEdit/HeadSlot.png" id="4_gsvfu"]
[ext_resource type="Texture2D" uid="uid://567vutk12a12" path="res://Scenes/Menus/CharacterMenu/MenuPages/SlotHighlight.png" id="5_nf14f"]
[ext_resource type="Texture2D" uid="uid://di2sns34ee4ju" path="res://assets/Sprites/UI/CharacterEdit/BodySlot.png" id="6_4ymfl"]
[ext_resource type="Texture2D" uid="uid://djwy03i8oyrfm" path="res://assets/Sprites/UI/CharacterEdit/BootSlot.png" id="7_ovqa5"]
[ext_resource type="Texture2D" uid="uid://jwg5aqbw71la" path="res://assets/Sprites/UI/CharacterEdit/MainHandSlot.png" id="8_iq4ns"]
[ext_resource type="PackedScene" uid="uid://uo60871y6t54" path="res://Scenes/Combat/MapObjects/Actors/ComplexActorNode/complex_actor_node.tscn" id="9_11hbc"]
[ext_resource type="Texture2D" uid="uid://diy8q5lpvpw1u" path="res://assets/Sprites/UI/SymbolIcons/PhyDamageSymbol.png" id="10_fakc6"]
[ext_resource type="Theme" uid="uid://dwinll8pgdjhc" path="res://Scenes/Themes/standard_theme.tres" id="11_yoiqy"]
[ext_resource type="Texture2D" uid="uid://dq2cad8orar4p" path="res://assets/Sprites/UI/SymbolIcons/ArmorSymbol.png" id="12_gi4jt"]
[ext_resource type="Texture2D" uid="uid://b201kpuib7q5k" path="res://assets/Sprites/UI/SymbolIcons/MagDamageSymbol.png" id="13_qtcvn"]
[ext_resource type="Texture2D" uid="uid://d17k5iaed0gdg" path="res://assets/Sprites/UI/SymbolIcons/WardSymbol.png" id="14_oxpvh"]
[ext_resource type="Texture2D" uid="uid://wu75tejgoo7m" path="res://assets/Sprites/UI/CharacterEdit/BookSlot.png" id="15_pfudu"]
[ext_resource type="Texture2D" uid="uid://co33b1qq2uef7" path="res://assets/Sprites/UI/CharacterEdit/BagSlot.png" id="16_f6co0"]
[ext_resource type="Texture2D" uid="uid://puhp53n8k1h8" path="res://assets/Sprites/UI/CharacterEdit/TrinketSlot.png" id="17_oq3ld"]
[ext_resource type="Texture2D" uid="uid://dwliocipx40sq" path="res://assets/Sprites/UI/CharacterEdit/OffHandSlot.png" id="18_rpkhf"]

[node name="EquipmentSlotsControl" type="Control" node_paths=PackedStringArray("actor_node", "armor_lable", "ward_label", "phyatk_label", "magatk_label")]
custom_minimum_size = Vector2(256, 256)
layout_mode = 3
anchors_preset = 0
offset_right = 256.0
offset_bottom = 256.0
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_1ll62")
actor_node = NodePath("CenterContainer/Control/Node2D/ActorNode")
armor_lable = NodePath("MiddlePortraitContainer/StatsContainer/LeftStatContainer/PhyDefense/Label")
ward_label = NodePath("MiddlePortraitContainer/StatsContainer/RightStatContainer/MagDefense/Label")
phyatk_label = NodePath("MiddlePortraitContainer/StatsContainer/LeftStatContainer/PhyAttack/Label")
magatk_label = NodePath("MiddlePortraitContainer/StatsContainer/RightStatContainer/MagAttack/Label")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_tlto1")

[node name="LeftEquipSlots" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(64, 0)
layout_mode = 1
anchors_preset = -1
anchor_right = 0.25
anchor_bottom = 1.0
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="HeadSlotButton" type="TextureButton" parent="LeftEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("4_gsvfu")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="LeftEquipSlots/HeadSlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="LeftEquipSlots/HeadSlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_gsvfu")

[node name="BodySlotButton" type="TextureButton" parent="LeftEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("6_4ymfl")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="LeftEquipSlots/BodySlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="LeftEquipSlots/BodySlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_4ymfl")

[node name="FeetSlotButton" type="TextureButton" parent="LeftEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("7_ovqa5")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="LeftEquipSlots/FeetSlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="LeftEquipSlots/FeetSlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("7_ovqa5")

[node name="MainHandSlotButton" type="TextureButton" parent="LeftEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("8_iq4ns")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="LeftEquipSlots/MainHandSlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="LeftEquipSlots/MainHandSlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("8_iq4ns")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_right = 0.75
anchor_bottom = 0.75
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="CenterContainer"]
layout_mode = 2

[node name="Node2D" type="Node2D" parent="CenterContainer/Control"]
scale = Vector2(3, 3)

[node name="ActorNode" parent="CenterContainer/Control/Node2D" instance=ExtResource("9_11hbc")]
position = Vector2(0, 8)

[node name="MiddlePortraitContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.25
anchor_top = 0.75
anchor_right = 0.75
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0
alignment = 2

[node name="StatsContainer" type="HBoxContainer" parent="MiddlePortraitContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftStatContainer" type="VBoxContainer" parent="MiddlePortraitContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="PhyAttack" type="HBoxContainer" parent="MiddlePortraitContainer/StatsContainer/LeftStatContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="MiddlePortraitContainer/StatsContainer/LeftStatContainer/PhyAttack"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("10_fakc6")

[node name="Label" type="Label" parent="MiddlePortraitContainer/StatsContainer/LeftStatContainer/PhyAttack"]
self_modulate = Color(0.498039, 0, 0, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme = ExtResource("11_yoiqy")
text = "999"

[node name="PhyDefense" type="HBoxContainer" parent="MiddlePortraitContainer/StatsContainer/LeftStatContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="MiddlePortraitContainer/StatsContainer/LeftStatContainer/PhyDefense"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("12_gi4jt")

[node name="Label" type="Label" parent="MiddlePortraitContainer/StatsContainer/LeftStatContainer/PhyDefense"]
self_modulate = Color(0.498039, 0, 0, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme = ExtResource("11_yoiqy")
text = "999"

[node name="RightStatContainer" type="VBoxContainer" parent="MiddlePortraitContainer/StatsContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="MagAttack" type="HBoxContainer" parent="MiddlePortraitContainer/StatsContainer/RightStatContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="MiddlePortraitContainer/StatsContainer/RightStatContainer/MagAttack"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("13_qtcvn")

[node name="Label" type="Label" parent="MiddlePortraitContainer/StatsContainer/RightStatContainer/MagAttack"]
self_modulate = Color(0.498039, 0, 0, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme = ExtResource("11_yoiqy")
text = "999"

[node name="MagDefense" type="HBoxContainer" parent="MiddlePortraitContainer/StatsContainer/RightStatContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Icon" type="TextureRect" parent="MiddlePortraitContainer/StatsContainer/RightStatContainer/MagDefense"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("14_oxpvh")

[node name="Label" type="Label" parent="MiddlePortraitContainer/StatsContainer/RightStatContainer/MagDefense"]
self_modulate = Color(0.498039, 0, 0, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme = ExtResource("11_yoiqy")
text = "999"

[node name="RightEquipSlots" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(6, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.75
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 0

[node name="BookSlotButton" type="TextureButton" parent="RightEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("15_pfudu")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="RightEquipSlots/BookSlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="RightEquipSlots/BookSlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("15_pfudu")

[node name="BagSlotButton" type="TextureButton" parent="RightEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("16_f6co0")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="RightEquipSlots/BagSlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="RightEquipSlots/BagSlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("16_f6co0")

[node name="TrinketSlotButton" type="TextureButton" parent="RightEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("17_oq3ld")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="RightEquipSlots/TrinketSlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="RightEquipSlots/TrinketSlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("17_oq3ld")

[node name="OffHandSlotButton" type="TextureButton" parent="RightEquipSlots" node_paths=PackedStringArray("highlight_background", "icon_texture_rect")]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("3_1srlt")
highlight_background = NodePath("TextureRect")
default_icon_texture = ExtResource("18_rpkhf")
icon_texture_rect = NodePath("IconTextureRect")

[node name="TextureRect" type="TextureRect" parent="RightEquipSlots/OffHandSlotButton"]
visible = false
layout_mode = 0
offset_right = 64.0
offset_bottom = 64.0
texture = ExtResource("5_nf14f")

[node name="IconTextureRect" type="TextureRect" parent="RightEquipSlots/OffHandSlotButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("18_rpkhf")
